using System;

namespace Pig_n_Go.Driver
{
    public class CarInfo
    {
        public Guid Id { get; init; }
        public string ModelName { get; init; }
        public string CarNumber { get; init; }
        public string Color { get; init; }
    }
}