using System;

namespace Pig_n_Go.Driver
{
    public class DriverInfo
    {
        public Guid Id { get; set; }
        public string Name { get; set; }
        public string Surname { get; set; }
    }
}