@startuml
'https://plantuml.com/class-diagram

abstract class TariffBase
{
    +abstract decimal ChargePerLocationUnit
}

TariffBase <.. EconomyTariff
TariffBase <.. ComfortTariff
TariffBase <.. BusinessTariff
TariffBase <.. EliteTariff

class DriverModel
{
    +Guid Id;
    +DriverInfo Info;
    +CarInfo CarInfo;
    +CartesianLocationUnit LocationUnit;
    +DriverRating Rating;
    +TariffBase ConcreteTariff;
}

class DriverInfo
{
    +Guid Id;
    +string Name;
    +string Surname;
}

class DriverRating
{ 
    -List<OrderRating> _ratingHistory;
    +Guid Id;
    +decimal AvrRating;
    +IReadOnlyCollection<OrderRating> RatingHistory;
}

class OrderRating
{
    +Guid Id;
    +int GivenRating;
    +Passenger Author;
}

class CarInfo
{
    +Guid Id;
    +string ModelName;
    +string CarNumber;
    +string Color;
}

class CartesianLocationUnit
{
    +decimal Abscissa
    +decimal Ordinate
}

DriverModel o-- DriverRating
DriverModel o-- DriverInfo
DriverModel o-- CarInfo
DriverModel o-- CartesianLocationUnit
DriverModel o-l- TariffBase

DriverRating o-- OrderRating

@enduml